# linux-voice-control

./: .gitignore  README.md  config-example.json  config.py  input_handler.py  main.py  pyproject.toml  requirements-systray.txt  requirements.txt  systray.py  voskstream.py
examples/configs/: config-example.json
src/: config.py  formatter.py  input_handler.py  main.py  voskstream.py
src/libre_dictum/: config.py  input_handler.py  main.py
